# time_series_expenses

./: .gitignore  README.md  basic_timeseries.ipynb  pyproject.toml
scripts/: basic_timeseries.ipynb  building_model_kaggle.ipynb
time_series_expenses/: prepare_data.py
