[tool.poetry]
name = "time-series-expenses"
version = "0.1.0"
description = "Training a TS model on own expenses data"
authors = ["Mkranj <mkranjcev6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
prophet = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
