[tool.poetry]
name = "time-series-expenses"
version = "0.1.0"
description = ""
authors = ["Mkranj <mkranjcev6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
prophet = "^1.1.5"
plotly = "^5.21.0"
ipywidgets = "^8.1.2"
notebook = "^7.1.3"
scikit-learn = "^1.4.2"
statsmodels = "^0.14.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
